--- a/ITS_demo/templates/display copy.html
+++ b/ITS_demo/templates/display copy.html
@@ -346,7 +346,7 @@ for (i = 0; i < close.length; i++) {
 
 <div class="line1" style="display: none;">
     <label for="quo" >Quotient:</label>
-    <input type="text" id="quo" name="quo" maxlength="2" size="2" onblur="check0();" required>
+    <input type="text" id="quo" name="quo" maxlength="2" size="2" onblur="check0();">
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
@@ -354,7 +354,7 @@ for (i = 0; i < close.length; i++) {
 
 <div class="line1" style="display: none;">
     <label for="rem">Remainder:</label>
-    <input type="text" id="rem" name="rem" maxlength="2" size="2" onblur="check1();" required>
+    <input type="text" id="rem" name="rem" maxlength="2" size="2" onblur="check1();">
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
