--- a/ITS_demo/templates/layout.html
+++ b/ITS_demo/templates/layout.html
@@ -209,7 +209,7 @@ progress::-webkit-progress-bar {
 		</div>
 
 		<div id="d2">
-			<h1>ITS-Maths</h1>
+			<h1 style="color: yellow!important;">ITS-Maths</h1>
 		</div>
 	</nav>
 	<div id="d3" class="slidemenu">
