--- a/ITS_demo/templates/question_display_design.html
+++ b/ITS_demo/templates/question_display_design.html
@@ -15,6 +15,8 @@
                         <div class="card-body" >
                             <div  style="  background-color: #E6E4E4; ;margin:1px; padding:15px;display: flex;justify-content: space-between;align-items: center;"><h5 class="card-title">Expressed as Mixed Fraction</h5>
                             <a href="mixed-fraction" class="btn btn-primary">Practice</a></div>
+                            <!-- <a href="layout_new.html" class="btn btn-primary">Practice</a> -->
+                            <!-- </div> -->
                         </div>
                 </div>
             </div>
