--- a/ITS_demo/templates/home.html
+++ b/ITS_demo/templates/home.html
@@ -147,7 +147,7 @@
               </ul>
             </div>
           </nav>
-          <div id="demo" class="carousel slide" data-ride="carousel">
+        <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
               <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -250,8 +250,8 @@
                         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
                         <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
-                        <button type="button" class="btn signup white" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button>
-                        <button type="button" class="btn signup white" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button>
+                        <a href="{{ url_for('fraction_easy') }}"><button type="button" class="btn signup white" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
+                        <a href="{{ url_for('fraction_intermediate') }}"><button type="button" class="btn signup white" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
                         </div>
                     </div>
                 </div>
@@ -272,8 +272,8 @@
                         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
                         <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-around align-items-center mt-5">
-                        <button type="button" class="btn signup  blue" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button>
-                        <button type="button" class="btn signup blue" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button>
+                          <a href="{{ url_for('algebra_easy') }}"><button type="button" class="btn signup  blue" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px">EASY</button></a>
+                          <a href="{{ url_for('algebra_intermediate') }}"><button type="button" class="btn signup blue" style="font-size: 1.5rem;border-radius:50px;height:90px;width:200px;padding:5px;">INTERMEDIATE</button></a>
                         </div>
                     </div>
                 </div>
