--- a/ITS_demo/templates/layout_new.html
+++ b/ITS_demo/templates/layout_new.html
@@ -12,7 +12,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <title>Practice</title>
+    
     <style>
+  .blue {
+         background-color: #0070BB;
+         color: white;
+       }
+
+       .white {
+         background-color: white;
+       }
+
          #n1 {
             position: fixed; 
             height:calc(100%-200px);
@@ -22,11 +32,11 @@
             z-index: 9999; 
             /* background-color: #3A6351!important; */
             /* TRIAL */
-            background-color: #F5E6CA!important;  
+            /* background-color: #F5E6CA!important;   */
         }
 
         .navbar-brand,.nav-link{
-            color: #000 !important;
+            color: #fff !important;
             
         }
         .main{
@@ -37,7 +47,7 @@
         }
 
         .green {
-            background-color: #3A6351;
+            /* background-color: #3A6351; */
             color:white;
         }
 
@@ -50,7 +60,7 @@
         }
 
         i{
-            color: #fff;
+            color: #0070bb;
         }
 
         .done{
@@ -65,153 +75,7 @@
           padding: 0 4em;
         } */
 
-timeline {
-  min-width: 300px;
-  max-width: 500px;
-  /* margin: auto; */
-}
 
-.time-p {
-  font-size: 1.3em;
-  line-height: 1.75em;
-  border-top: 3px solid;
-  border-image: linear-gradient(to right, #3a6351 0%, #3a6351 100%);
-  border-image-slice: 1;
-  border-width: 3px;
-  margin: 0;
-  padding: 65px;
-  counter-increment: section;
-  position: relative;
-  color: rgb(0, 0, 0);
-  /* margin-bottom: 5px; */
-} 
-  /* //numbers */
-  .time-p:before {
-    content: counter(section);
-    position: absolute;
-    border-radius: 50%;
-    padding: 0px;
-    height: 1.25em;
-    width: 1.25em;
-    background-color: #3a6351;
-    /* background-color:green; */
-    text-align: center;
-    line-height: 1.25em;
-    color: #fff;
-    font-size: 1em;
-   }
-
-/* //odd number borders */
-.time-p:nth-child(odd) {
-  border-right: 3px solid;
-  padding-left: 0;
- } 
- .time-p:nth-child(odd)::before {
-    left: 105%; 
-    margin-left: -20px;
-  }
-
-/* //even number borders */
-.time-p:nth-child(even) {
-  border-left: 3px solid;
-  padding-right: 0;
-}  
-.time-p:nth-child(even)::before {
-    right: 105%; 
-    margin-right: -20px;
-  }
-
-/* //handle first and last */
-.time-p:first-child {
-  border-top: 0;
-  border-top-right-radius:0;
-  border-top-left-radius:0;
-}
-.time-p:last-child {
-  border-bottom-right-radius:0;
-  border-bottom-left-radius:0;
-}
-
-.time-card {
-  display: flex;
-  justify-content: space-between;
-}
-
-.stepper-wrapper {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-.stepper-item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
-
-  @media (max-width: 768px) {
-    font-size: 12px;
-  }
-}
-
-.stepper-item::before {
-  position: absolute;
-  content: "";
-  border-bottom: 2px solid #ccc;
-  width: 100%;
-  top: 20px;
-  left: -50%;
-  z-index: 2;
-}
-
-.stepper-item::after {
-  position: absolute;
-  content: "";
-  border-bottom: 2px solid #ccc;
-  width: 100%;
-  top: 20px;
-  left: 50%;
-  z-index: 2;
-}
-
-.stepper-item .step-counter {
-  position: relative;
-  z-index: 5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #ccc;
-  margin-bottom: 6px;
-}
-
-.stepper-item.active {
-  font-weight: bold;
-}
-
-.stepper-item.completed .step-counter {
-  background-color: #4bb543;
-}
-
-.stepper-item.completed::after {
-  position: absolute;
-  content: "";
-  border-bottom: 2px solid #4bb543;
-  width: 100%;
-  top: 20px;
-  left: 50%;
-  z-index: 3;
-}
-
-.stepper-item:first-child::before {
-  content: none;
-}
-.stepper-item:last-child::after {
-  content: none;
-}
 #progressbar {
     position: absolute;
     left: 35px;
@@ -308,10 +172,15 @@ timeline {
     color: #D50000 !important
 }
 
+{% block style %}{% endblock %}
+
     </style>
+<script>
+{% block script %}{% endblock %}
+</script>
 </head>
 <body>
-    <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav">
+    <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav blue">
         <a class="navbar-brand" href="#">Logo PhiloMath</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -338,11 +207,11 @@ timeline {
     <div class="container main">
         <div class="card">
           
-            <div class="card-header green">
-              Fractions - Mixed Fraction
+            <div class="card-header white" style="color: #0070BB;">
+              <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
               <!-- <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="card" aria-label="Close"></button> -->
             </div>
-            <div>
+            <!-- <div> -->
               <!-- <div class="stepper-wrapper">
                 <div class="stepper-item completed">
                   <div class="step-counter">1</div>
@@ -368,7 +237,7 @@ timeline {
                 <li class="step0"></li>
                 <li class="step0"></li>
             </ul> -->
-            <div class="card1">
+            <!-- <div class="card1">
               <ul id="progressbar" class="text-center">
                   <li class="active step0"></li>
                   <li class="step0"></li>
@@ -378,63 +247,66 @@ timeline {
               <h6 class="mb-5">Enter your Email</h6>
               <h6 class="mb-5">Set password</h6>
               <h6 class="mb-5">Select your country</h6>
-          </div>
+          </div> -->
             
             <div class = "time-card">
               
             <div class="card-body" style="width: 80%;">
-              <h5 class="card-title">Express as mixed fraction</h5>
-              <h6 class="card-text">5 <br> --- <br> 6</h6>
-              <div class="line1">
+              <!-- <h5 class="card-title">{% block question %}{% endblock %}</h5> -->
+              {% block content %}{% endblock %}
+
+
+              <!-- <h6 class="card-text">5 <br> --- <br> 6</h6> -->
+              <!-- <div class="line1">
                 <label for="quo" >Quotient:</label>
                 <input type="text" id="quo" name="quo" maxlength="2" size="2" onblur="check0();">
-                <!-- <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct"> -->
-                <!-- <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong"> -->
+                <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
+                <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
                 <br><br>
-            </div>
+            </div> -->
             
-            <div class="line1">
+            <!-- <div class="line1">
                 <label for="rem">Remainder:</label>
                 <input type="text" id="rem" name="rem" maxlength="2" size="2" onblur="check1();">
-                <!-- <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct"> -->
-                <!-- <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong"> -->
+                <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
+                <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
                 <br><br>
               </div>
               <table>
-                <tr>
+                <tr> -->
         <!--               numerator-->
-                    <td></td>
+                    <!-- <td></td>
                     <td><input type="text" id="mf2" name="mf" maxlength="2" size="2" onblur="check3();" required></td>
-                    <!-- <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td> -->
-                    <!-- <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td> -->
+                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
+                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
                 </tr>
         
                 <tr>
-        
+         -->
         <!--                mixed fraction-->
-                    <td><input type="text" id="mf1" name="mf" maxlength="2" size="2" onblur="check2();"required></td>
+                    <!-- <td><input type="text" id="mf1" name="mf" maxlength="2" size="2" onblur="check2();"required></td>
                     <td><hr/></td>
-                    <!-- <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td> -->
-                    <!-- <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td> -->
+                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
+                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
         
                 </tr>
         
-                <tr>
+                <tr> -->
         <!--                denominator-->
-                    <td></td>
+                    <!-- <td></td>
                     <td><input type="text" id="mf3" name="mf" maxlength="2" size="2" onblur="check4();" required></td>
-                    <!-- <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td> -->
-                    <!-- <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td> -->
+                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
+                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
                 </tr>
                 <label for="mf1">Mixed Fraction:</label>
                 <br>
-            </table>
+            </table> -->
               
             </div>
          
           </div>
 
-          </div>
+          <!-- </div> -->
           <div class="modal fade" id="myModal" role="dialog" style="margin-top: 50px;">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -476,7 +348,7 @@ timeline {
             <div class="card-footer text-muted green">
                 <a href="#" class="btn btn-info" data-toggle="modal" data-target="#myModal">Hint</a>
                 
-                <i class="bi bi-circle-fill right done"></i>
+                <i class="bi bi-circle-fill right"></i>
                 <i class="bi bi-circle-fill"></i>
                 <i class="bi bi-circle-fill"></i>
                 <i class="bi bi-circle-fill"></i>
@@ -495,76 +367,76 @@ timeline {
         </script>
 
 <script>
-$(document).ready(function(){
+// $(document).ready(function(){
 
-var current_fs, next_fs, previous_fs;
+// var current_fs, next_fs, previous_fs;
 
-// No BACK button on first screen
-if($(".show").hasClass("first-screen")) {
-$(".prev").css({ 'display' : 'none' });
-}
+// // No BACK button on first screen
+// if($(".show").hasClass("first-screen")) {
+// $(".prev").css({ 'display' : 'none' });
+// }
 
-// Next button
-$(".next-button").click(function(){
+// // Next button
+// $(".next-button").click(function(){
 
-current_fs = $(this).parent().parent();
-next_fs = $(this).parent().parent().next();
+// current_fs = $(this).parent().parent();
+// next_fs = $(this).parent().parent().next();
 
-$(".prev").css({ 'display' : 'block' });
+// $(".prev").css({ 'display' : 'block' });
 
-$(current_fs).removeClass("show");
-$(next_fs).addClass("show");
+// $(current_fs).removeClass("show");
+// $(next_fs).addClass("show");
 
-$("#progressbar li").eq($(".card2").index(next_fs)).addClass("active");
+// $("#progressbar li").eq($(".card2").index(next_fs)).addClass("active");
 
-current_fs.animate({}, {
-step: function() {
+// current_fs.animate({}, {
+// step: function() {
 
-current_fs.css({
-'display': 'none',
-'position': 'relative'
-});
+// current_fs.css({
+// 'display': 'none',
+// 'position': 'relative'
+// });
 
-next_fs.css({
-'display': 'block'
-});
-}
-});
-});
+// next_fs.css({
+// 'display': 'block'
+// });
+// }
+// });
+// });
 
-// Previous button
-$(".prev").click(function(){
+// // Previous button
+// $(".prev").click(function(){
 
-current_fs = $(".show");
-previous_fs = $(".show").prev();
+// current_fs = $(".show");
+// previous_fs = $(".show").prev();
 
-$(current_fs).removeClass("show");
-$(previous_fs).addClass("show");
+// $(current_fs).removeClass("show");
+// $(previous_fs).addClass("show");
 
-$(".prev").css({ 'display' : 'block' });
+// $(".prev").css({ 'display' : 'block' });
 
-if($(".show").hasClass("first-screen")) {
-$(".prev").css({ 'display' : 'none' });
-}
+// if($(".show").hasClass("first-screen")) {
+// $(".prev").css({ 'display' : 'none' });
+// }
 
-$("#progressbar li").eq($(".card2").index(current_fs)).removeClass("active");
+// $("#progressbar li").eq($(".card2").index(current_fs)).removeClass("active");
 
-current_fs.animate({}, {
-step: function() {
+// current_fs.animate({}, {
+// step: function() {
 
-current_fs.css({
-'display': 'none',
-'position': 'relative'
-});
+// current_fs.css({
+// 'display': 'none',
+// 'position': 'relative'
+// });
 
-previous_fs.css({
-'display': 'block'
-});
-}
-});
-});
+// previous_fs.css({
+// 'display': 'block'
+// });
+// }
+// });
+// });
 
-});
+// });
 
 </script>
 </body>
