--- a/ITS_demo/templates/division copy.html
+++ b/ITS_demo/templates/division copy.html
@@ -1,4 +1,4 @@
-{% extends "layout_new.html" %}
+{% extends "layout_new_easy.html" %}
 
 {% block script %}
   
@@ -6,19 +6,21 @@ var ans=["{{ contexts.ans_num[0] }}","{{ contexts.ans_den[0] }}","{{ contexts.an
 console.log(ans)
 function checkQuo(i){
     if(document.getElementsByTagName("input")[i].value == ans[i]){
-        alert("Correct")
+        alert("Correct");
+        document.getElementsByClassName("step0")[i].classList.add("active");
     }
     else{
-        alert("you have not divided properly...")
+        alert("you have not divided properly...");
     }
 }
 
 function checkRem(i){
     if(document.getElementsByTagName("input")[i].value == ans[i]){
-        alert("Correct")
+        alert("Correct");
+        document.getElementsByClassName("step0")[i].classList.add("active");
     }
     else{
-        alert("you have not divided properly...")
+        alert("you have not divided properly...");
     }
 }
 
@@ -33,9 +35,13 @@ function checkRem(i){
 {% block content %}
 {% for i in range(0,3,2) %}
     <h5 class="card-title">{{contexts.q[i]}}</h5>
-    {{ contexts.label1 }}: <input type="text" class="quo" onchange = checkQuo({{ i }});">
-    <br>
+    {{ contexts.label1 }}: <input type="text" class="quo" onchange = "checkQuo({{ i }});">
+    <br><br><br>
     {{ contexts.label2 }}: <input type="text" class="rem" onchange = "checkRem({{ i+1 }});">
     <br><br>
 {% endfor %}
+{% endblock %}
+
+{% block hint %}
+<img src="../static/images/Long Division Calculator with Remainders.png" alt="" style="margin-left: 30%;">
 {% endblock %}
